--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <a href="=https://py3.codeskulptor.org/?authuser=0#user308_kywUCiwwIfhOksH.py>les notions de programmation sur Python<a/>
         <a href=https://py3.codeskulptor.org/?authuser=0#user308_aECHbvVTR2Fko86.py>instruction if<a/>
    	 <p>Chapitre2:Internet</p>
+     <a href="https://docs.google.com/document/d/1BV7uh3xuDFRNFgXZnkZN2ZzfREvrtIj9D1Bzdeq_LTg/edit?usp=classroom_web&authuser=0</a>
             	<p>Chapitre3:Le web</p>
+    <a href="https://www.mindomo.com/fr/mindmap/d53db2d10cf34f2eb779e89807816d53<a/>
             	<p>Chapitre4:Les réseaux sociaux</p>
             	<p>Chapitre5:Le traitement de données</p>
             	<p>Chapitre6:La photographie numérique</p
