--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     	<p>Chapitre #1: Python </p>
     	<a href="https://py3.codeskulptor.org/#user308_GJ6WA15Dw6UP2cG.py" target="_blank">Python</a>
     	<p>Chapitre #2: Internet </p>
-    	<a href="https://cfsadovnik.github.io/Internet" target="_blank">Internet</a>
+    	<a href="https://docs.google.com/document/d/1BV7uh3xuDFRNFgXZnkZN2ZzfREvrtIj9D1Bzdeq_LTg/edit?usp=classroom_web&authuser=0"_blank">Internet</a>
     	<p>Chapitre #3: Le Web </p>
     	<a href="https://www.mindomo.com/fr/mindmap/d53db2d10cf34f2eb779e89807816d53" target="_blank">Le Web</a>
+    	<p>Chapitre #4: Les reseaux sociaux </p>
+        <a href="https://docs.google.com/document/d/162IkcSri-jBJ9pQi_7rDmyfXpBt7gpPWrFMD4rrjMpc/edit?usp=classroom_web&authuser=0" target="_blank">Le Web</a>
     	<p>Chapitre #4: Les reseaux sociaux </p>
     	<p>Chapitre #5: Le traitement de donnes </p>
     	<p>Chapitre #6: La photographie numerique </p>
