--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    	<h3> Les Projets à realiser</h3>
 
 
-<a href="https://isamanzano1.github.io/Ma petite page Web en SNT" target="_blank">Ma petite page Web en SNT</a>
+<a href="https://isamanzano1.github.io/Ma petite page Web" target="_blank">Ma petite page Web </a>
 
 <p>Si target="_blank", le lien ouvrira une autre fenêtre ou onglet.</p>
 
