--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     	<p>Chapitre #3: Le Web </p>
     	<a href="https://www.mindomo.com/fr/mindmap/d53db2d10cf34f2eb779e89807816d53" target="_blank">Le Web</a>
     	<p>Chapitre #4: Les reseaux sociaux </p>
-        <a href="https://docs.google.com/document/d/162IkcSri-jBJ9pQi_7rDmyfXpBt7gpPWrFMD4rrjMpc/edit?usp=classroom_web&authuser=0" target="_blank">Le Web</a>
+        <a href="https://docs.google.com/document/d/162IkcSri-jBJ9pQi_7rDmyfXpBt7gpPWrFMD4rrjMpc/edit?usp=classroom_web&authuser=0" target="_blank">Cyberharcelement</a>
     	<p>Chapitre #4: Les reseaux sociaux </p>
     	<p>Chapitre #5: Le traitement de donnes </p>
     	<p>Chapitre #6: La photographie numerique </p>
