--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
    	 
     	<p>Chapitre #1: Python </p>
     	<a href="https://py3.codeskulptor.org/#user308_GJ6WA15Dw6UP2cG.py" target="_blank">Python</a>
+		 <img  src="Python.png" width="200" height="200"/>
     	<p>Chapitre #2: Internet </p>
     	<a href="https://drive.google.com/file/d/1kCr_AayeUbv8Y_1Rpr_G9EaklqKqwgbm/view?usp=gmail&authuser=0"_blank">Internet</a>
     	<p>Chapitre #3: Le Web </p>
