--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 		 <img  src="Python.png" width="200" height="200"/>
     	<p>Chapitre #2: Internet </p>
     	<a href="https://drive.google.com/file/d/1kCr_AayeUbv8Y_1Rpr_G9EaklqKqwgbm/view?usp=gmail&authuser=0"_blank">Internet</a>
+		 <img  src="internet.png" width="200" height="200"/>
     	<p>Chapitre #3: Le Web </p>
     	<a href="https://www.mindomo.com/fr/mindmap/d53db2d10cf34f2eb779e89807816d53" target="_blank">Le Web</a>
+		 <img  src="web.png" width="200" height="200"/>
     	<p>Chapitre #4: Les reseaux sociaux </p>
         <a href="https://docs.google.com/document/d/162IkcSri-jBJ9pQi_7rDmyfXpBt7gpPWrFMD4rrjMpc/edit?usp=classroom_web&authuser=0" target="_blank">Cyberharcelement</a>
     	<p>Chapitre #4: Les reseaux sociaux </p>
