--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		 <img  src="web.png" width="200" height="200"/>
     	<p>Chapitre #4: Les reseaux sociaux </p>
         <a href="https://docs.google.com/document/d/162IkcSri-jBJ9pQi_7rDmyfXpBt7gpPWrFMD4rrjMpc/edit?usp=classroom_web&authuser=0" target="_blank">Cyberharcelement</a>
+		 <img  src="reseaux sociaux.png" width="200" height="200"/>
     	<p>Chapitre #4: Les reseaux sociaux </p>
     	<p>Chapitre #5: Le traitement de donnes </p>
     	<p>Chapitre #6: La photographie numerique </p>
