--- a/Ma petite page Web.html
+++ b/Ma petite page Web.html
@@ -17,7 +17,8 @@
 
    
 <p>Ma Petite Page Web</p>
-  
+   <img  src="desserts.jpg" width="200" height="200"/>
+     <img  src="patisserie.webp" width="200" height="200"/>
 <p>Page Web de SNT</p>
 
 </html>
